fixing toggle dark mode on mobile screen size

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -517,7 +517,7 @@ body {
 }
 
 .nav-item.dropdown.active > .nav-link {
-    color: white !important; /* Keeps the original text color */
+    color: white; /* Keeps the original text color */
 }
 
 .swiper-slide .row {
